# reorder_editable

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
reorder_editable/: __main__.py  core.py
